--- a/templates/index.html
+++ b/templates/index.html
@@ -1,28 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html'%}
 {% load static %}
-{% include 'header.html'%}
-
-<head>
-    <!-- Title Page -->
-    <title>First Motors home page </title>
-    <!-- Required Meta Tags -->
-    <meta charset="UTF-8">
-    <meta name="description" content="">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link rel="icon" type="image/png" href="img/logo.png">
-    <!-- file css project -->
-    <!-- Include Bootstrap4 File -->
-    <link rel="stylesheet" href="{% static 'css/_bootstrap.min.css'%}">
-    <link rel="stylesheet" href="{% static 'css/_bootstrap-rtl.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'css/_hover-min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/animate.css' %}">
-</head>
-<body>
+{% block content %}
 <!--web-->
-<section class="web web-main">
+
     <section class="loading">
         <div class="load">
             <div class="dot"></div>
@@ -2112,32 +2092,4 @@
             </div>
         </div>
     </section>
-    <!--=============== Start Footer ===============-->
-   </section>
-
-
-
-<!-- script File -->
-<script src="{% static 'js/jquery-3.3.1.min.js'%}"></script>
-<script src="{% static 'js/bootstrap.min.js'%}"></script>
-<script src="{% static 'js/jquery.nicescroll.min.js'%}"></script>
-<script src="{% static 'js/html5shiv.js'%}"></script>
-<script src="{% static 'js/main.js'%}"></script>
-<script src="{% static 'js/wow.js'%}"></script>
-<script type="text/javascript">
-    window.addEventListener('load', (event) => {
-            var loading = document.querySelector('.web .loading');
-            setTimeout(function(){
-                loading.style.opacity = "0";
-                loading.style.transition = "all 0.2s ease-in";
-                setTimeout(function(){
-                    loading.style.display = "none";
-                },200);
-            },200);
-        });
-
-</script>
-<script src="{% static 'js/backend.js1' %}"></script>
-{% include 'footer.html'%}
-</body>
-</html>
+ {% endblock %}
