--- a/templates/co-details.html
+++ b/templates/co-details.html
@@ -1,27 +1,6 @@
-{% load static  %}
+{% extends 'base.html'%}
+{% block content %}
 
-<html lang="en">
-
-<head>
-    <!-- Title Page -->
-    <title>First Motors | Cart</title>
-    <!-- Required Meta Tags -->
-    <meta charset="UTF-8">
-    <meta name="description" content="">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link rel="icon" type="image/png" href="/static/img/logo.png">
-    <!-- file css project -->
-    <!-- Include Bootstrap4 File -->
-    <link rel="stylesheet" href="/static/css/_bootstrap.min.css">
-    <!-- Include Main Style Css File -->
-     <link rel="stylesheet" href="{% static 'css/_bootstrap-rtl.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="/static/css/_hover-min.css">
-    <link rel="stylesheet" href="/static/css/animate.css">
-</head>
-<body>
-{% include 'header.html'%}
     <section class="web">
         <section class="servDetails">
             <div class="container">
@@ -60,12 +39,6 @@
                 </div>
             </div>
         </section>
-  {% include 'footer.html'%}
-    <!-- script File -->
-    <script src="/static/js/jquery-3.3.1.min.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/js/main.js"></script>
-    <script src="/static/js/jquery.nicescroll.min.js"></script>
-    <script src="/static/js/html5shiv.js"></script>
-</body>
-</html>
+    </section>
+
+{% endblock %}
