--- a/templates/mining.html
+++ b/templates/mining.html
@@ -1,28 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    {% load static%}
-    <!-- Title Page -->
-    <title>First Motors | mining</title>
-    <!-- Required Meta Tags -->
-    <meta charset="UTF-8">
-    <meta name="description" content="">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link rel="icon" type="image/png" href="img/logo.png">
-    <!-- file css project -->
-    <!-- Include Bootstrap4 File -->
-    <link rel="stylesheet" href="/static/css/_bootstrap.min.css">
-    <!-- Include Main Style Css File -->
-     <link rel="stylesheet" href="{% static 'css/_bootstrap-rtl.css' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="/static/css/_hover-min.css">
-    <link rel="stylesheet" href="/static/css/animate.css">
-</head>
-<body>
+{% extends 'base.html'%}
+{% block content %}
     <section class="web">
-    {%include 'header.html'%}
         <section class="mining">
             <div class="container">
                 <div class="row">
@@ -152,27 +130,4 @@
                 </div>
             </div>
         </section>
-        <!--=============== Start Footer ===============-->
-       {% include 'footer.html'%}
-    </section>
-    <!-- script File -->
-    <script src="/static/js/jquery-3.3.1.min.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/js/main.js"></script>
-    <script src="/static/js/jquery.nicescroll.min.js"></script>
-    <script src="/static/js/wow.js"></script>
-    <script type="/static/text/javascript">
-        wow = new WOW(
-                 {
-                 boxClass:     'wow',      // default
-                 animateClass: 'animated', // default
-                 offset:       0,          // default
-                 mobile:       true,       // default
-                 live:         true        // default
-               }
-               )
-               wow.init();
-   </script>
-    <script src="/static/js/html5shiv.js"></script>
-</body>
-</html>
+{% endblock %}
