the django content manage

--- a/templates/About.html
+++ b/templates/About.html
@@ -178,7 +178,7 @@
                                         </svg>
                                         <div class="contenu">
                                             <img src="/static/img/goW.png" alt="">
-                                            <h3>المزيــد</h3>
+                                            <a href="/story-detail"><h3>المزيد</h3> </a>
                                         </div>
                                     </div>
                                 </div>
